@@ -1,48 +1,56 @@
-/*
- * Copyright 2012 MyBatis.org.
+/**
+ *    Copyright 2009-2019 the original author or authors.
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ *    Licensed under the Apache License, Version 2.0 (the "License");
+ *    you may not use this file except in compliance with the License.
+ *    You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *       http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ *    Unless required by applicable law or agreed to in writing, software
+ *    distributed under the License is distributed on an "AS IS" BASIS,
+ *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *    See the License for the specific language governing permissions and
+ *    limitations under the License.
  */
 package org.apache.ibatis.scripting;
 
 import java.util.HashMap;
 import java.util.Map;
 
+/**
+ * @author Frank D. Martinez [mnesarco]
+ */
 public class LanguageDriverRegistry {
 
-  private final Map<Class<?>, LanguageDriver> LANGUAGE_DRIVER_MAP = new HashMap<Class<?>, LanguageDriver>();
+  private final Map<Class<? extends LanguageDriver>, LanguageDriver> LANGUAGE_DRIVER_MAP = new HashMap<>();
 
-  private Class<?> defaultDriverClass = null;
+  private Class<? extends LanguageDriver> defaultDriverClass;
 
-  public void register(Class<?> cls) {
+  public void register(Class<? extends LanguageDriver> cls) {
     if (cls == null) {
       throw new IllegalArgumentException("null is not a valid Language Driver");
     }
-    if (!LanguageDriver.class.isAssignableFrom(cls)) {
-      throw new ScriptingException(cls.getName() + " does not implements " + LanguageDriver.class.getName());
-    }
-    LanguageDriver driver = LANGUAGE_DRIVER_MAP.get(cls);
-    if (driver == null) {
+    LANGUAGE_DRIVER_MAP.computeIfAbsent(cls, k -> {
       try {
-        driver = (LanguageDriver) cls.newInstance();
-        LANGUAGE_DRIVER_MAP.put(cls, driver);
+        return k.getDeclaredConstructor().newInstance();
       } catch (Exception ex) {
         throw new ScriptingException("Failed to load language driver for " + cls.getName(), ex);
       }
+    });
+  }
+
+  public void register(LanguageDriver instance) {
+    if (instance == null) {
+      throw new IllegalArgumentException("null is not a valid Language Driver");
+    }
+    Class<? extends LanguageDriver> cls = instance.getClass();
+    if (!LANGUAGE_DRIVER_MAP.containsKey(cls)) {
+      LANGUAGE_DRIVER_MAP.put(cls, instance);
     }
   }
 
-  public LanguageDriver getDriver(Class<?> cls) {
+  public LanguageDriver getDriver(Class<? extends LanguageDriver> cls) {
     return LANGUAGE_DRIVER_MAP.get(cls);
   }
 
@@ -50,11 +58,11 @@ public class LanguageDriverRegistry {
     return getDriver(getDefaultDriverClass());
   }
 
-  public Class<?> getDefaultDriverClass() {
+  public Class<? extends LanguageDriver> getDefaultDriverClass() {
     return defaultDriverClass;
   }
 
-  public void setDefaultDriverClass(Class<?> defaultDriverClass) {
+  public void setDefaultDriverClass(Class<? extends LanguageDriver> defaultDriverClass) {
     register(defaultDriverClass);
     this.defaultDriverClass = defaultDriverClass;
   }
